	PR target/32325 	* except.c (finish_eh_generation): Call commit_edge_insertions if 	there are insns queued on the entry edge. 	* config/alpha/alpha.c (alpha_gp_save_rtx): Insert the insns on 	the entry edge.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@128665 138bc75d-0d04-0410-961f-82ee72b054a4